Update JQuery and JQuery UI to latest baseline. Refs #2660

--- a/public/404.html
+++ b/public/404.html
@@ -12,11 +12,11 @@
 			<link rel="stylesheet/less" type="text/css" href="/web/css/bootswatch.less">
 			<link rel="stylesheet/less" type="text/css" href="/web/css/variables.less">
 			<script src="/web/js/widgets.js"></script>
-			<script src="/web/js/jquery-1.7.2.min.js"></script>
+			<script src="/web/js/jquery-1.10.2.min.js"></script>
 			<script src="/web/js/bootstrap-carousel.js"></script>
 			<script src="/web/js/bootstrap-tab.js"></script>		
-			<script src="/web/js/jquery-ui-1.8.20.custom.min.js"></script>
-			<link rel='stylesheet' type='text/css' href='/web/css/jquery-ui-1.8.20.custom.css' />			
+			<script src="/web/js/jquery-ui-1.10.3.custom.min.js"></script>
+			<link rel='stylesheet' type='text/css' href='/web/css/jquery-ui-1.10.3.custom.min.css' />			
 
 		<!-- SHIM FOR HTML5 Display in early IE browsers -->
 		
