--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -36,7 +36,7 @@
 
     <script type="text/javascript" src="jquery-1.7.1.js"></script>
 	<script type="text/javascript" src="bootstrap.min.js"></script>
-    <script type="text/javascript" src="jquery-ui-1.8.16.custom.js"></script>
+    <script type="text/javascript" src="jquery-ui-1.10.3.custom.min.js"></script>
     <script type="text/javascript" src="jquery.hammer.js"></script>
     <script type="text/javascript" src="async.js"></script>
 
@@ -124,7 +124,7 @@
  	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="index.css" />
     <link rel="stylesheet" type="text/css" href="vwf/view/editor/editor.css" />
-    <link rel="stylesheet" type="text/css" href="jquery-ui-1.8.16.custom.css" />
+    <link rel="stylesheet" type="text/css" href="jquery-ui-1.10.3.custom.min.css" />
 
   </head>
 
