--- a/public/write-together/list.html
+++ b/public/write-together/list.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"></link>
     <link rel="stylesheet" href="css/application.css"></link>
 
-    <script type="text/javascript" src="jquery-1.7.1.js"></script>
+    <script type="text/javascript" src="jquery-1.10.2.min.js"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.timeago.js" type="text/javascript"></script>
     <script src="js/list.js" type="text/javascript"></script>
