--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -34,7 +34,7 @@
 
     <script type="text/javascript" src="require.js"></script>
 
-    <script type="text/javascript" src="jquery-1.7.1.js"></script>
+    <script type="text/javascript" src="jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="bootstrap.min.js"></script>
     <script type="text/javascript" src="jquery-ui-1.10.3.custom.min.js"></script>
     <script type="text/javascript" src="jquery.hammer.js"></script>
