Fix Node Server circular redirect issues.  Fixes #3000 Fix admin/config serveHandler.  Fixes #2886 Update Casperjs automated server tests.

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 		<script type="text/javascript">
 				function UrlExists(){
 				var http = new XMLHttpRequest();
-				http.open('HEAD', 'web/about.html', false);
+				http.open('GET', 'web/about.html', false);
 				http.send();
 				if(http.status!=404){window.location.href = "web/about.html"; };
 				if(http.status==404){var body=document.getElementsByTagName('body')[0];body.style.display="block";};
