Update nav bar on top of 404 page to match the main page
refs #3068

--- a/public/404.html
+++ b/public/404.html
@@ -40,10 +40,8 @@
 						<ul class="nav pull-right">
 						  <li><a href="/web/about.html">About</a></li>
 						  <li><a href="/web/catalog.html">Demos</a></li>
-						  <li><a href="/web/docs/introduction.html">Documentation</a></li>
+						  <li><a href="/web/documentation.html">Documentation</a></li>
 						  <li><a href="/web/downloads.html">Downloads</a></li>
-						  <li><a href="/web/glossary.html">Glossary</a></li>
-						  <li><a href="/web/faq.html">FAQ</a></li>
 						  <li><a href="/web/forum.html">Forum</a></li>
 						</ul>
 				  </nav>
