--- a/public/bzflag/index.vwf.html
+++ b/public/bzflag/index.vwf.html
@@ -1,6 +1,7 @@
 ﻿<div id="wrapper" style="height:100%;width:100%;z-index:2;position:absolute;top:0px;left:0px;pointer-events:none;">
 	<!-- JAVASCRIPT -->
 
+	<script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
 	<script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
 	<script src="js/events.js" type="text/javascript"></script>
 
