--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -34,10 +34,6 @@
 
     <script type="text/javascript" src="require.js"></script>
 
-    <script type="text/javascript" src="jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="bootstrap.min.js"></script>
-    <script type="text/javascript" src="jquery-ui-1.10.3.custom.min.js"></script>
-    <script type="text/javascript" src="jquery.hammer.js"></script>
     <script type="text/javascript" src="async.js"></script>
 
     <script type="text/javascript" src="closure/base.js"></script>
@@ -51,9 +47,7 @@
     <script type="text/javascript" src="mash.js"></script>
 
     <script type="text/javascript" src="Class.create.js"></script>
-    <script type="text/javascript" src="jquery-encoder-0.1.0.js"></script>
     <script type="text/javascript" src="rAF.js"></script>
-    <script type="text/javascript" src="centerinclient.js"></script>
 
     <!-- This is the main client library. vwf.js creates a framework manager and attaches it to  -->
     <!-- the global window object as window.vwf. All access to the framework is through that     -->
@@ -135,55 +129,9 @@
     <!-- The main content renders to "#vwf-root", the item with the id "vwf-root".               -->
 
     <div id="vwf-root"></div>
-	
-    <!-- Overlay div to display loading information> -->
-    <div id="loadVWFModal" class="modal">
-      <div class="modal-header">
-            <img src="images/logo.png" style="width:100%;"/>
-      </div>
-      <div class="modal-body">
-    		<div>
-    			<table style="width:100%;">
-    				<tr>
-    					<td><span id='WGL' class='req'></span></td>
-    					<td><span id='ES5' class='req'></span></td>
-    					<td><span id='WS' class='req'></span></td>
-    				</tr>
-    			</table>
-    			<div class="progress progress-striped active">
-    				<div class="bar" id="loadVWFProgressBar" style="width:100%;"></div>
-    			</div>
-    		</div>
-      </div>
-      <div class="modal-footer">
-
-    		<div id='loadText' style="font-family: 'Droid Sans',sans-serif;font-size: 14px;line-height: 20px;color: #999;text-alignment:left;width:100%"> </div>
-      </div>
-    </div>
 
     <script type="text/javascript">
-        function updateOverlay(compatibility)
-        {
-            if(compatibility.compatible) {
-                setTimeout("$('#loadVWFModal').modal('hide')",2000);
-            }
-            else {
-                if(compatibility.errors["WGL"]) {
-                    $('#WGL').prepend("<img src='images/x.png' alt=' ' width='20px'/> WebGL");       
-                }
-                if(compatibility.errors["ES5"]) {
-                    $('#ES5').prepend("<img src='images/x.png' alt=' ' width='20px'/> ECMAScript5");                    
-                }
-                if(compatibility.errors["WS"]) {
-                    $('#WS').html("<img src='images/x.png' alt=' ' width='20px'/> WebSockets");
-                }
-                $('#loadText').html("This browser is not compatible. Please review <a href='/web/docs/reqs.html'>documentation</a>.");
-            }
-        }
-
-        $("#loadVWFModal").centerInClient();
-        $('#loadVWFModal').modal('show');
-        vwf.loadConfiguration(application, userLibraries, updateOverlay);
+        vwf.loadConfiguration(application, userLibraries);
     </script>
   </body>
 
