Fix client tests
Refs #3108

--- a/support/client/test/behaviors.html
+++ b/support/client/test/behaviors.html
@@ -8,7 +8,6 @@
 
     <script type="text/javascript" src="qunit.js"></script>
 
-    <script type="text/javascript" src="../lib/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="../lib/async.js"></script>
 
     <script type="text/javascript" src="../lib/crypto.js"></script>
@@ -25,13 +24,16 @@
 
       require( {
 
-        baseUrl: "../lib"
+        baseUrl: "../lib",
+        paths: {
+          jquery: "jquery-1.10.2.min",
+        },
 
       }, [
-
         "domReady",
         "utility.js",
 
+        "jquery",
         "vwf/configuration",
         "vwf/kernel/model",
         "vwf/model/javascript",
