--- a/support/client/test/replication.html
+++ b/support/client/test/replication.html
@@ -8,7 +8,6 @@
 
     <script type="text/javascript" src="qunit.js"></script>
 
-    <script type="text/javascript" src="../lib/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="../lib/async.js"></script>
 
     <script type="text/javascript" src="../lib/crypto.js"></script>
@@ -25,14 +24,18 @@
 
       require( {
 
-        baseUrl: "../lib"
+        baseUrl: "../lib",
+        paths: {
+          jquery: "jquery-1.10.2.min",
+        },
 
       }, [
 
         "domReady",
         "utility.js",
-
         "vwf/configuration",
+
+        "jquery",
         "vwf/kernel/model",
         "vwf/model/javascript",
         "vwf/model/object",
