--- a/support/client/test/scripts.html
+++ b/support/client/test/scripts.html
@@ -8,7 +8,6 @@
 
     <script type="text/javascript" src="qunit.js"></script>
 
-    <script type="text/javascript" src="../lib/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="../lib/async.js"></script>
 
     <script type="text/javascript" src="../lib/crypto.js"></script>
@@ -25,7 +24,10 @@
 
       require( {
 
-        baseUrl: "../lib"
+        baseUrl: "../lib",
+        paths: {
+          jquery: "jquery-1.10.2.min",
+        },
 
       }, [
 
@@ -35,6 +37,7 @@
         // This is the common model implementation and an example model that connects the
         // simulation to a WebGL scene manager.
 
+        "jquery",
         "vwf/configuration",
         "vwf/kernel/model",
         "vwf/model/javascript",
