Update catalog page demos. Fixes #2910.

--- a/public/web/gallery.htm
+++ b/public/web/gallery.htm
@@ -24,7 +24,41 @@
       </div>
     </div>
     <!-- End ADL Sandbox -->
-    
+
+    <!-- AGI Cesium -->
+    <div class="span12">
+      <div style="padding-top: 15px;">
+        <table class="table table-striped">
+          <tr>
+            <td style="width:25%">
+              <a href="../agi/cesium#!cesium" target="_blank">
+                <img src="images/gallery.cesium.png" alt="agi/cesium" / style="vertical-align:middle;">            
+              </a>
+            </td>
+            <td style="width:75%">
+                <h3 style="float:left;vertical-align:middle;">AGI Cesium</h3> 
+                <a style="float:right;vertical-align:middle;" class="btn btn-info btn-small" target="_blank" href="../agi/cesium#!cesium">Launch New Session</a>
+                <br/>
+                <hr>
+                <p style="font-size:13px;"><a target="_blank" href="http://www.agi.com/">Analytical Graphics, Inc's (AGI)</a> Cesium is a web-based globe and map engine for visualizing dynamic data. This demo application allows a user to have synchronized camera views across multiple clients. Pressing the "R" key will reset the synchronized views across all instances.</p>
+                <br/>
+                <div id='agi/cesium-content' class='overlayContent'>
+                  <div class="overlay">
+                    <div class='agicesiuminstances'>
+                    <p><b>Current Sessions</b></p>
+                  </div>
+                  <script type="text/javascript">
+                  $(document.getElementById('agicesiuminstances')).ready(showInfo('agi/cesium', '#!cesium'));             
+                  </script>
+                </div>
+              </div>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <!-- END AGI Cesium -->
+
     <!--  Direct link to KimRay Valve -->
     <div class="span12">
       <div style="padding-top: 15px;">
@@ -50,7 +84,7 @@
     <!-- End Kimray Valve -->
 
     <hr style="margin:18px 0 18px 0;border-bottom:1px solid #1C1E22;"/>
-    <h1>Additional Users</h1>
+    <h1>Who's Using VWF</h1>
     <hr style="margin:18px 0 18px 0;border-bottom:1px solid #1C1E22;"/>
 
     <!--  Direct link to ADL -->
@@ -76,6 +110,29 @@
     </div>
     <!-- End ADL -->
 
+    <!-- Analytical Graphics, Inc. (AGI) -->
+    <div class="span12">
+      <div style="padding-top: 15px;">
+        <table class="table table-striped">
+          <tr>
+            <td style="width:25%">
+              <a href="http://www.agi.com/" target="_blank">
+                <img src="images/gallery.agi.jpg" alt="AGI" / style="vertical-align:middle;">            
+              </a>
+            </td>
+            <td style="width:75%">
+              <h3 style="float:left;vertical-align:middle;">Analytical Graphics, Inc.</h3> 
+              <br/>
+              <hr>
+              <p style="font-size:13px;"><a target="_blank" href="http://www.agi.com/">Analytical Graphics, Inc. (AGI)</a> provides COTS software to national security and space professionals for integrated analyses and visualization of land, sea, air, and space assets. AGI has integrated Cesium, their WebGL based virtual globe, with the framework. </p>
+              <br/>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <!-- End AGI -->
+
     <!-- Cole Engineering (CESI) -->
     <div class="span12">
       <div style="padding-top: 15px;">
@@ -87,7 +144,7 @@
               </a>
             </td>
             <td style="width:75%">
-              <h3 style="float:left;vertical-align:middle;">Cole Engineering Services, Inc. (CESI)</h3> 
+              <h3 style="float:left;vertical-align:middle;">Cole Engineering Services, Inc.</h3> 
               <br/>
               <hr>
               <p style="font-size:13px;"><a target="_blank" href="http://www.coleengineering.com/">Cole Engineering Services, Inc. (CESI)</a> has explored the integration of VWF with JBUS and the EDGE platform. </p>
@@ -98,6 +155,29 @@
       </div>
     </div>
     <!-- End CESI -->
+
+    <!-- J7 -->
+    <div class="span12">
+      <div style="padding-top: 15px;">
+        <table class="table table-striped">
+          <tr>
+            <td style="width:25%">
+              <a href="http://www.jcs.mil/page.aspx?id=22" target="_blank">
+                <img src="images/gallery.j7.png" alt="J7" / style="vertical-align:middle;">            
+              </a>
+            </td>
+            <td style="width:75%">
+              <h3 style="float:left;vertical-align:middle;">J7</h3> 
+              <br/>
+              <hr>
+              <p style="font-size:13px;"><a target="_blank" href="http://www.jcs.mil/page.aspx?id=22">The Joint Force Development (J7)</a> supports the Joint Warfighter through joint force development, and is utilizing VWF to create a virtual command center. </p>
+              <br/>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <!-- End J7 -->
 
     <!-- Lively Kernel -->
     <div class="span12">
@@ -182,7 +262,7 @@
               <h3 style="float:left;vertical-align:middle;">Z Shift</h3> 
               <br/>
               <hr>
-              <p style="font-size:13px;"><a target="_blank" href="http://www.zshiftgroup.com/">Z Shift</a> is developing VWF applications for a virtual command center in correlation with the US Joint and Coalition Warfighting (JCW) group. </p>
+              <p style="font-size:13px;"><a target="_blank" href="http://www.zshiftgroup.com/">Z Shift</a> is developing VWF applications for a virtual command center in correlation with the US Joint Force Development (J7). </p>
               <br/>
             </td>
           </tr>
