--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -74,38 +74,48 @@
         var application;
         var regex = /([^&=]+)=?([^&]*)/g;
 
-        while(match = regex.exec(queryString)) {
-            var key = $.encoder.canonicalize(match[1]);
-            var parameters = $.encoder.canonicalize(match[2]);
-            if(key == "application") {
-                // Get the application specification if one is provided in the query string.
-                application = parameters;
+        var requireConfig = {
+            paths: {
+                jquery: "jquery-1.10.2.min"
+            },
+            shim: {
+                "jquery-encoder-0.1.0": ["jquery"],
             }
-            else {
+        };
+        require(requireConfig, ["jquery", "jquery-encoder-0.1.0"], function($) {
+            while(match = regex.exec(queryString)) {
+                var key = $.encoder.canonicalize(match[1]);
+                var parameters = $.encoder.canonicalize(match[2]);
+                if(key == "application") {
+                    // Get the application specification if one is provided in the query string.
+                    application = parameters;
+                }
+                else {
+                    try {
+                        parameters = JSON.parse(parameters);
+                    }
+                    catch(e) {
+                    }
+                    userLibraries["model"]["vwf/model/" + key] = (parameters && parameters != "") ? parameters : undefined;
+                }
+            }
+
+            while(match = regex.exec(hashString)) {
+                var key = $.encoder.canonicalize(match[1]);
+                var parameters = $.encoder.canonicalize(match[2]);
                 try {
                     parameters = JSON.parse(parameters);
                 }
                 catch(e) {
                 }
-                userLibraries["model"]["vwf/model/" + key] = (parameters && parameters != "") ? parameters : undefined;
+                userLibraries["view"]["vwf/view/" + key] = (parameters && parameters != "") ? parameters : undefined;
+                if(key == "google-earth") {
+                    googleEarth = true;
+                }
             }
-        }
 
-        while(match = regex.exec(hashString)) {
-            var key = $.encoder.canonicalize(match[1]);
-            var parameters = $.encoder.canonicalize(match[2]);
-            try {
-                parameters = JSON.parse(parameters);
-            }
-            catch(e) {
-            }
-            userLibraries["view"]["vwf/view/" + key] = (parameters && parameters != "") ? parameters : undefined;
-            if(key == "google-earth") {
-                googleEarth = true;
-            }
-        }
-
-        googleEarth && document.write( "<scr" + "ipt type='text/javascript' src='http://www.google.com/jsapi?hl=en&amp;key=ABQIAAAAwbkbZLyhsmTCWXbTcjbgbRSzHs7K5SvaUdm8ua-Xxy_-2dYwMxQMhnagaawTo7L1FE1-amhuQxIlXw'></scr" + "ipt>")
+            googleEarth && document.write( "<scr" + "ipt type='text/javascript' src='http://www.google.com/jsapi?hl=en&amp;key=ABQIAAAAwbkbZLyhsmTCWXbTcjbgbRSzHs7K5SvaUdm8ua-Xxy_-2dYwMxQMhnagaawTo7L1FE1-amhuQxIlXw'></scr" + "ipt>");
+        });
     </script>
     <script type="text/javascript">googleEarth && google.load( "earth", "1" )</script>
     
