Fix applications that depend on jQuery or bootstrap
Refs #3108, #3109

--- a/public/marbles/index.vwf.html
+++ b/public/marbles/index.vwf.html
@@ -11,6 +11,10 @@
 <!-- either express or implied. See the License for the specific language governing permissions  -->
 <!-- and limitations under the License.                                                          -->
 <link rel="stylesheet" type="text/css" href="css/marbles.css"/>
+<link rel="stylesheet" type="text/css" href="css/jquery-ui-1.10.3.custom.min.css"/>
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+<script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
+<script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
 
 
 <!-- The following div provides buttons for controlling the solitaire activity.                  -->
@@ -194,7 +198,6 @@
 </script>
 
 <!-- The input field for the login dialog above -->
-<link rel="stylesheet" type="text/css" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css" />
 <div id="login">
 	<input id="userName" type="text" placeholder="Your Name" maxlength="32">
 </div>
