--- a/public/webrtc/index.vwf.html
+++ b/public/webrtc/index.vwf.html
@@ -23,9 +23,13 @@
 		a:hover {color:#FF0000;}   /* mouse over link */
 		a:active {color:#FF8888;}  /* selected link */
 	</style>
+	<link rel="stylesheet" type="text/css" href="jquery-ui-1.10.3.custom.min.css" />
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css" />	
 	<link rel="stylesheet" type="text/css" href="style.css" />
 
+	<script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
+	<script src="js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="videoWindow.js"></script>
 
 	<script type="text/javascript">
