--- a/public/cesium-webrtc/index.vwf.html
+++ b/public/cesium-webrtc/index.vwf.html
@@ -17,6 +17,7 @@
     <title>Cesium VWF Demo</title>
     <link href="vwf-video.css" rel="stylesheet" type="text/css" />
     <link href="toolbar.css" rel="stylesheet" type="text/css" />
+    <link href="jquery-ui-1.10.3.custom.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="bootstrap.css" />
     <style>
       @import url( CesiumWidget.css );
@@ -26,6 +27,8 @@
         overflow: hidden;
       }
     </style>
+    <script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
+    <script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
     <script type="text/javascript">
       document.title = "Cesium - Webrtc VWF Demo";
 
