--- a/public/chat/index.vwf.html
+++ b/public/chat/index.vwf.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Virtual World Framework - Chat</title>
+    <script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
+    <script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="chat-audio">
