--- a/public/humvee/index.vwf.html
+++ b/public/humvee/index.vwf.html
@@ -15,7 +15,11 @@
 
 <html>
   <head>
-    <link href="humvee.css" rel="stylesheet" type="text/css" />
+    <script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
+    <script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
+    <link href="css/humvee.css" rel="stylesheet" type="text/css" />
+    <link href="css/jquery-ui-1.10.3.custom.min.css" rel="stylesheet" type="text/css" />
+
     <script type="text/javascript">
 
       $(function() {
