--- a/public/minesweeper/index.vwf.html
+++ b/public/minesweeper/index.vwf.html
@@ -16,7 +16,10 @@
 <html>
 	<head>
 		<title>Minesweeper</title>
-		<link href="minesweeper.css" rel="stylesheet" type="text/css" />
+		<script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
+    	<script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
+		<link href="css/minesweeper.css" rel="stylesheet" type="text/css" />
+		<link href="css/jquery-ui-1.10.3.custom.min.css" rel="stylesheet" type="text/css" />
 		<script type="text/javascript">
 			$(function() {
 				var gameInProgress = vwf.getProperty(vwf.find("", "/")[0], 'gameInProgress');
