--- a/public/oneToOne/index.vwf.html
+++ b/public/oneToOne/index.vwf.html
@@ -15,8 +15,11 @@
 <html>
   <head>
     <title>Cesium VWF Demo</title>
+    <script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
+    <script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
     <link href="vwf-video.css" rel="stylesheet" type="text/css" />
     <link href="toolbar.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="jquery-ui-1.10.3.custom.min.css" />
     <link rel="stylesheet" type="text/css" href="bootstrap.css" />
     <style>
       @import url( CesiumWidget.css );
