--- a/public/physics/index.vwf.html
+++ b/public/physics/index.vwf.html
@@ -16,6 +16,7 @@
 <html>
 
   <head>
+    <script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
     <script type="text/javascript">
       function clearObjects() {
         vwf_view.kernel.find("", "/clearButton", function(clearButtonID) {
