--- a/public/radio/index.vwf.html
+++ b/public/radio/index.vwf.html
@@ -15,6 +15,7 @@
 
 <html>
   <head>
+    <script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
   	<script type="text/javascript">
       vwf_view.calledMethod = function (nodeId, methodName, methodParameters, methodValue) {
         switch(methodName) {
