--- a/public/sandtable/index.vwf.html
+++ b/public/sandtable/index.vwf.html
@@ -17,6 +17,7 @@
   <head>
     <title>Sandtable</title>
     <link href="toolbar.css" rel="stylesheet" type="text/css" />
+    <script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
     <script type="text/javascript">
 
       var inputMode;
