--- a/public/tile-puzzle-2D/index.vwf.html
+++ b/public/tile-puzzle-2D/index.vwf.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Virtual World Framework</title>
+    <script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
     <script type="text/javascript">
       var gameID;
 
