Remove extraneous demos from catalog page.

--- a/public/web/gallery.htm
+++ b/public/web/gallery.htm
@@ -170,7 +170,7 @@
               <h3 style="float:left;vertical-align:middle;">J7</h3> 
               <br/>
               <hr>
-              <p style="font-size:13px;"><a target="_blank" href="http://www.jcs.mil/page.aspx?id=22">The Joint Staff J7 supports the joint warfighter through Joint Force Development in order to advance the operational effectiveness of the current and future joint force, and is utilizing VWF to create a virtual joint operations center to support JS J7's traditional joint collective training responsibilities, as well as improve learning and execution across the broader training spectrum - to include enhancing individual joint training and infusing unit home-station training with joint and coalition context.</p>
+              <p style="font-size:13px;"><a target="_blank" href="http://www.jcs.mil/page.aspx?id=22">The Joint Staff J7</a> supports the joint warfighter through Joint Force Development in order to advance the operational effectiveness of the current and future joint force, and is utilizing VWF to create a virtual joint operations center to support JS J7's traditional joint collective training responsibilities, as well as improve learning and execution across the broader training spectrum - to include enhancing individual joint training and infusing unit home-station training with joint and coalition context.</p>
               <br/>
             </td>
           </tr>
