Update link to cesium image to point to app folder.

--- a/public/web/catalog.htm
+++ b/public/web/catalog.htm
@@ -158,7 +158,7 @@
           <tr>
             <td style="width:25%">
               <a href="../agi/cesium#!cesium" target="_blank">
-                <img src="images/gallery.cesium.png" alt="agi/cesium" / style="vertical-align:middle;">            
+                <img src="../agi/cesium/index.vwf.catalog.jpg" alt="agi/cesium" / style="vertical-align:middle;">            
               </a>
             </td>
             <td style="width:75%">
