--- a/public/web/catalog-template.html
+++ b/public/web/catalog-template.html
@@ -2,7 +2,7 @@
     <script type='text/javascript'>
       function showInfo(app, query) {
         function update(app) {
-          var instances$ = $('.'+ app.replace(/\//g,'') + 'instances');
+          var instances$ = $('#'+ app.replace(/\//g,'') + 'instances');
           var match;
           jQuery.getJSON( "../" + app + "/admin/instances", function( data ) {
             instances$.empty();
@@ -57,14 +57,14 @@
         },
         {
           name: 'kimray',
-          description: 'The Kimray valve app, built for the <a target="_blank" href="http://www.nmjc.edu/">New Mexico Junior College</a>, is a live 3D Immersive Maintenance Demonstration built on top of VWF to demonstrate the capabilities of Remote Subject Matter Experts interacting with a student using a shared real time lesson workspace. This app utilizes WebRTC to deliver real time video and voice over IP without any browser plugins. ', 
+          description: 'The Kimray valve app, built for the <a target="_blank" href="http://www.nmjc.edu/">New Mexico Junior College</a>, is a live 3D Immersive Maintenance Demonstration built on top of VWF to demonstrate the capabilities of Remote Subject Matter Experts interacting with a student using a shared real-time lesson workspace. This app uses WebRTC to deliver real-time video and voice over IP without any browser plugins. ', 
           hyperlink: 'https://ec2-54-226-9-164.compute-1.amazonaws.com/kimray/',
           logo: 'images/gallery.kimray.png',
           core: false
         },
         {
           name: 'bzflag',
-          description: 'The bzflag app is VWF\'s version of the classic arcade game. Use the WASD keys to navigate the scene and the Enter key to fire a laser. Use the chat feature to communicate and taunt your opponents, but most of all look out for opposing tanks!', 
+          description: 'The bzflag app is VWF\'s version of the classic arcade game. Use the WASD keys to move and the Enter key to fire your laser cannon. Use the chat feature to communicate and taunt your opponents, but most of all look out for opposing tanks!', 
           hyperlink: '../bzflag',
           logo: '../bzflag/index.vwf.catalog.png',
           core: true
@@ -78,7 +78,7 @@
         },
         {
           name: 'radio-lesson',
-          description: 'The radio lesson app walks a user through turning the radio on and its basic operations using the VWF lesson interface.', 
+          description: 'The radio lesson app uses VWF\'s lesson interface to walk a user through the basic operations of the radio.', 
           hyperlink: '../radio-lesson',
           logo: '../radio-lesson/index.vwf.catalog.png',
           core: true
@@ -92,14 +92,14 @@
         },
         {
           name: 'minesweeper',
-          description: 'The VWF\'s take on the class Minesweeper game. Click tiles to turn them over. The number that appears is representative of the number of neighboring mines. Unveiling all numbers wins the game - select the wrong tile and it\'s game over.', 
+          description: 'VWF\'s take on the classic Minesweeper game. Click tiles to turn them over and see the number of neighboring mines. Unveiling all numbers wins the game - select the wrong tile and it\'s game over.', 
           hyperlink: '../minesweeper',
           logo: '../minesweeper/index.vwf.catalog.png',
           core: true
         },
         {
           name: 'tile-puzzle-2D',
-          description: 'The 2D tile puzzle app shows VWF\'s ability to create apps that do not use 3D graphics or models. Play by clicking on a tile to move it to the open space.', 
+          description: 'Apps don\'t have to be 3D! The 2D tile puzzle is an example of a VWF app that does not use 3D graphics or models. Play by clicking on a tile to move it to the open space.', 
           hyperlink: '../tile-puzzle-2D',
           logo: '../tile-puzzle-2D/index.vwf.catalog.png',
           core: true
@@ -200,49 +200,49 @@
       var organizations = [
         {
           name: 'Advanced Distributed Learning',
-          description: '<a target="_blank" href="http://www.adlnet.gov/">Advanced Distributed Learning (ADL)</a> has utilized VWF to create a sandbox app that allows the user to create a world directly in the browser. Additionally, the ADL server allows for persistent worlds that can be shared with others over time. Check out their Sandbox app above.', 
+          description: '<a target="_blank" href="http://www.adlnet.gov/">Advanced Distributed Learning (ADL)</a> has utilized VWF to create a sandbox app that allows the user to create a world directly in the browser. The ADL server allows for persistent worlds that can be shared with others over time. Check out their sandbox app above.', 
           hyperlink: 'http://www.adlnet.gov/',
           logo: 'images/gallery.adl.png'
         },
         {
           name: 'Analytical Graphics, Inc.',
-          description: '<a target="_blank" href="http://www.agi.com/">Analytical Graphics, Inc. (AGI)</a> provides COTS software to national security and space professionals for integrated analyses and visualization of land, sea, air, and space assets. AGI has integrated Cesium, their WebGL based virtual globe, with the framework. ', 
+          description: '<a target="_blank" href="http://www.agi.com/">Analytical Graphics, Inc. (AGI)</a> provides COTS software to national security and space professionals for integrated analyses and visualization of land, sea, air, and space assets. AGI has integrated Cesium, their WebGL based virtual globe, with the framework. Check out their cesium app above.', 
           hyperlink: 'http://www.agi.com/',
           logo: 'images/gallery.agi.jpg'
         },
         // {
         //   name: 'Cole Engineering Services, Inc.',
-        //   description: '<a target="_blank" href="http://www.coleengineering.com/">Cole Engineering Services, Inc. (CESI)</a> has explored the integration of VWF with JBUS and the EDGE platform. ', 
+        //   description: '<a target="_blank" href="http://www.coleengineering.com/">Cole Engineering Services, Inc. (CESI)</a> has integrated VWF with JBUS and the EDGE platform. ', 
         //   hyperlink: 'http://www.coleengineering.com/',
         //   logo: 'images/gallery.cesi.png'
         // },
         {
           name: 'Joint Staff J7',
-          description: 'The <a target="_blank" href="http://www.jcs.mil/page.aspx?id=22">Joint Staff J7</a> supports the joint warfighter through Joint Force Development in order to advance the operational effectiveness of the current and future joint force, and is utilizing VWF to create a virtual joint operations center to support JS J7\'s traditional joint collective training responsibilities, as well as improve learning and execution across the broader training spectrum - to include enhancing individual joint training and infusing unit home-station training with joint and coalition context.', 
+          description: 'The <a target="_blank" href="http://www.jcs.mil/page.aspx?id=22">Joint Staff J7 (JS J7)</a> supports the joint warfighter through Joint Force Development in order to advance the operational effectiveness of the current and future joint force. JS J7 is using VWF to create a virtual joint operations center to support their traditional joint collective training responsibilities and improve learning and execution across the broader training spectrum - to include enhancing individual joint training and infusing unit home-station training with joint and coalition context.', 
           hyperlink: 'http://www.jcs.mil/page.aspx?id=22',
           logo: 'images/gallery.j7.png'
         },
         // {
         //   name: 'Lively Kernel',
-        //   description: '<a target="_blank" href="http://lively-kernel.org/">Lively Kernel</a>, a new approach to web programming, provides a complete platform for web applications, including dynamic graphics, network access, and development tools. Lively and VWF have teamed up to explore integration between the two architectures. Current exploration and further information can be found on <a target="_blank" href="https://github.com/virtual-world-framework/vwf/tree/branch/morph">GitHub</a>. ', 
+        //   description: '<a target="_blank" href="http://lively-kernel.org/">Lively Kernel</a>, a new approach to web programming, provides a complete platform for web apps, including dynamic graphics, network access, and development tools. Lively and VWF have teamed up to explore integration between the two architectures. Current exploration and further information can be found on <a target="_blank" href="https://github.com/virtual-world-framework/vwf/tree/branch/morph">GitHub</a>. ', 
         //   hyperlink: 'http://lively-kernel.org/',
         //   logo: 'images/gallery.lively.png'
         // },
         {
           name: 'Lockheed Martin',
-          description: '<a target="_blank" href="http://www.lockheedmartin.com/">Lockheed Martin</a> is internally developing projects with VWF for maintenance and task training in domains such as Defense, Marine, and Energy. ', 
+          description: '<a target="_blank" href="http://www.lockheedmartin.com/">Lockheed Martin</a> is developing VWF apps for maintenance and task training in domains such as Defense, Marine, and Energy. ', 
           hyperlink: 'http://www.lockheedmartin.com/',
           logo: 'images/gallery.lockheed.png'
         },
         {
           name: 'New Mexico Junior College',
-          description: '<a target="_blank" href="http://www.nmjc.edu/">New Mexico Junior College (NMJC)</a> is taking advantage of the remote collaborate nature of the framework, creating maintenance training applications that support real time interactions with instructors. Check out their Kimray Valve app above.  ', 
+          description: '<a target="_blank" href="http://www.nmjc.edu/">New Mexico Junior College (NMJC)</a> is leveraging the remote collaboration nature of the framework, creating maintenance training apps that support real time interactions with instructors. Check out their Kimray Valve app above.  ', 
           hyperlink: 'http://www.nmjc.edu/',
           logo: 'images/gallery.nmjc.png'
         },
         // {
         //   name: 'Z Shift',
-        //   description: '<a target="_blank" href="http://www.zshiftgroup.com/">Z Shift</a> is developing VWF apps for a virtual command center in correlation with the US Joint Force Development (J7). ', 
+        //   description: '<a target="_blank" href="http://www.zshiftgroup.com/">Z Shift</a> is developing VWF apps for a virtual command center in correlation with JS J7. ', 
         //   hyperlink: 'http://www.zshiftgroup.com/',
         //   logo: 'images/gallery.zshift.png'
         // }
