--- a/public/web/catalog-template.html
+++ b/public/web/catalog-template.html
@@ -207,7 +207,7 @@
         },
         {
           name: 'Analytical Graphics, Inc.',
-          description: '<a target="_blank" href="http://www.agi.com/">Analytical Graphics, Inc. (AGI)</a> provides COTS software to national security and space professionals for integrated analysis and visualization of land, sea, air, and space assets. AGI has integrated Cesium, their WebGL based virtual globe, with the framework. Check out their cesium app above.', 
+          description: '<a target="_blank" href="http://www.agi.com/">Analytical Graphics, Inc. (AGI)</a> provides COTS software to national security and space professionals for integrated analysis and visualization of land, sea, air, and space assets. AGI has integrated Cesium, their WebGL-based virtual globe, with the framework. Check out their cesium app above.', 
           hyperlink: 'http://www.agi.com/',
           logo: 'images/gallery.agi.jpg'
         },
