Replace '/' with '' when creating html div for instances.

--- a/public/web/catalog-template.html
+++ b/public/web/catalog-template.html
@@ -166,7 +166,7 @@
           innerSessionDivElement.className = 'overlay';
 
           var instancesDivElement = document.createElement('div');
-          instancesDivElement.id = name + 'instances';
+          instancesDivElement.id = name.replace(/\//g,'') + 'instances';
 
           var scriptElement = document.createElement('script');
           scriptElement.type = 'text/javascript';
