Update catalog page to show updated command-center app.

--- a/public/web/catalog-template.html
+++ b/public/web/catalog-template.html
@@ -72,6 +72,13 @@
           core: true
         },
         {
+          name: 'command-center',
+          description: 'The command center app is a virtual representation of a joint operations center, intended for use as a collaborative training classroom. Navigate using the standard VWF key and mouse controls. ', 
+          hyperlink: '../command-center',
+          logo: '../command-center/index.vwf.catalog.png',
+          core: true
+        },
+        {
           name: 'humvee-lesson',
           description: 'Using the VWF lesson configuration and interface, the humvee lesson app walks the user through the process of starting and driving the humvee.', 
           hyperlink: '../humvee-lesson',
