A kernel utility module.

--- a/support/client/test/drivers.html
+++ b/support/client/test/drivers.html
@@ -45,6 +45,7 @@
         "vwf/kernel/view", // explicitly loaded until vwf can load its dependencies
         "vwf/view/test",
         "vwf/view/glge",
+        "vwf/kernel/utility",
         "vwf/utility",
         "logger",
 
