--- a/support/client/test/future.html
+++ b/support/client/test/future.html
@@ -42,6 +42,7 @@
         "vwf/model/stage/log",
         "vwf/kernel/view",
         "vwf/view/document",
+        "vwf/kernel/utility",
         "vwf/utility",
         "logger",
 
