--- a/support/client/test/behaviors.html
+++ b/support/client/test/behaviors.html
@@ -40,6 +40,7 @@
         "vwf/model/object",
         "vwf/model/stage/log",
         "vwf/kernel/view",
+        "vwf/kernel/utility",
         "vwf/utility",
         "logger",
 
