Add element image selector to allow pace to stay open during image loading from Three.JS

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -49,7 +49,7 @@
     <script type="text/javascript" src="Class.create.js"></script>
     <script type="text/javascript" src="rAF.js"></script>
  
-	<script type="text/javascript" src="pace.min.js" data-pace-options='{ "elements": { "selectors": [img] }'></script>
+	<script type="text/javascript" src="pace.min.js" data-pace-options='{ "elements": { "selectors": ["#image"] }, "startOnPageLoad": false }'></script>
 
     <!-- This is the main client library. vwf.js creates a framework manager and attaches it to  -->
     <!-- the global window object as window.vwf. All access to the framework is through that     -->
