Add Requirejs call wrapping for pace

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -49,7 +49,18 @@
     <script type="text/javascript" src="Class.create.js"></script>
     <script type="text/javascript" src="rAF.js"></script>
  
-	<script type="text/javascript" src="pace.min.js" data-pace-options='{ "elements": { "selectors": ["#image"] }, "startOnPageLoad": false }'></script>
+	<script type="text/javascript">
+        require(['pace.min'], function(pace){
+            pace.start({
+                ajax: false, // disabled
+                document: false, // disabled
+                eventLag: false, // disabled
+                elements: {
+                    selectors: ['#image']
+                }
+            });
+        });
+	</script>
 
     <!-- This is the main client library. vwf.js creates a framework manager and attaches it to  -->
     <!-- the global window object as window.vwf. All access to the framework is through that     -->
@@ -130,7 +141,7 @@
 
   </head>
 
-  <body onLoad="Pace.start()">
+  <body>
 
     <!-- Generic clients may have nearly empty pages, but pages for custom clients may be laid   -->
     <!-- out in any manner desired. Any view and models that render to the page should be        -->
