Adjust EventLag minimum sampling to account for event lag of Three.JS

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -54,7 +54,9 @@
             pace.start({
                 ajax: false, // disabled
                 document: false, // disabled
-                eventLag: false, // disabled
+                eventLag: {
+                    minSamples: 50
+                },
                 elements: {
                     selectors: ['#image']
                 }
