Add polyfill for performance.now
Refs #3046

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -55,6 +55,7 @@
     <script type="text/javascript" src="Class.create.js"></script>
     <script type="text/javascript" src="jquery-encoder-0.1.0.js"></script>
     <script type="text/javascript" src="rAF.js"></script>
+    <script type="text/javascript" src="performance.now-polyfill.js"></script>
     <script type="text/javascript" src="centerinclient.js"></script>
 
     <!-- This is the main client library. vwf.js creates a framework manager and attaches it to  -->
